v? - ?
- fixed bug when checking for selected list items when none are selected
- now dependent on active_support gem (as a result of dynamic [Type]Additions, err, addition!)
- added proc_id and name methods to Application

v0.1.8 - 2010/12/08
- added visible? method to element. Don't expect too much from this
- started documenting the code

v0.1.7 - 2010/11/27
- fixed bug with entering new lines into text fields
- can now start apps with command line args
- can now navigate the object hierarchy: added root?, has_children?, children and parent methods to element
- element building innards reworked. now extends elements based on supported patterns

v0.1.6 - 2010/7/20
- added scroll interaction
- added prepare_element
- loads all items from list/tree if scrolling is necessary (to get around ms ui automation weirdness)

v0.1.5 skipped - screwed up the tags, so skipping this version to avoid confusion

v0.1.4 - 2010/7/11
- renamed is_password_field? to password_field?
- made many of the control pattern methods return ruby objects rather than .net objects (eg: count => count.to_i)
- updated gem's url details

v0.1.3 - 2010/7/5
- added table (datagrid) interaction
- toughened up the starting of apps
- removed logic that converts array with one element to the element itself

v0.1.2 - 2010/5/7
- added slider interaction
- added intermediate state check for checkboxes
- tests now use custom built bewildr test app
- process kill logic much better
- added more comprehensive list box functionality
- added rich text box interaction
- added a bit of tree functionality

v0.1.1 - 2010/4/29
- adding wait_for_existence_of and wait_for_non_existence_of

v0.1 - 2010/4/20 - first release!
- basic application, window and control management
- no documentation as yet
- not good for much