@@ -10,9 +10,14 @@ Feature: drag and drop
     Then I can get hold of the bewildr mouse
     And the mouse responds to the drag method
 
-    @wip
     Scenario: drag the label from one point to another
     Given I ensure that there are no instances of the test app running
     Given I start the test app
     And I select the drag'n'drop tab
     Then I can drag the label from one point to another by referencing the element
+
+    Scenario: drag the label from one point to the other via another label
+    Given I ensure that there are no instances of the test app running
+    Given I start the test app
+    And I select the drag'n'drop tab
+    Then I can drag the label from one point to another via yet another by referencing the elements
