@@ -2,6 +2,7 @@ v? - ?
 - fixed bug when checking for selected list items when none are selected
 - now dependent on active_support gem (as a result of dynamic [Type]Additions, err, addition!)
 - added proc_id and name methods to Application
+- added new Bewildr::Mouse class for clicking, right clicking, double clicking and dragging
 
 v0.1.8 - 2010/12/08
 - added visible? method to element. Don't expect too much from this
